--- a/src/app/cards-coutries/cards-countries.component.html
+++ b/src/app/cards-coutries/cards-countries.component.html
@@ -1,5 +1,5 @@
 <div class="card-group">
-  <ng-container *ngIf="!bool">
+  <ng-container *ngIf="boolRegion === boolSearch && !boolSearch && !boolRegion">
     <mat-card *ngFor="let country of countries">
       <img mat-card-image [src]="country.flag" />
       <mat-card-content>
@@ -12,8 +12,21 @@
       </mat-card-content>
     </mat-card>
   </ng-container>
-  <ng-container *ngIf="bool">
+  <ng-container *ngIf="boolSearch">
     <mat-card *ngFor="let country of searchCountries">
+      <img mat-card-image [src]="country.flag" />
+      <mat-card-content>
+        <h3>{{ country.name }}</h3>
+        <ul>
+          <li><strong>Population:</strong> {{ country.population }}</li>
+          <li><strong>Region:</strong> {{ country.region }}</li>
+          <li><strong>Capital:</strong> {{ country.capital }}</li>
+        </ul>
+      </mat-card-content>
+    </mat-card>
+  </ng-container>
+  <ng-container *ngIf="boolRegion && !boolSearch">
+    <mat-card *ngFor="let country of regions">
       <img mat-card-image [src]="country.flag" />
       <mat-card-content>
         <h3>{{ country.name }}</h3>
