--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -10,16 +10,11 @@
       (input)="search(input)"
     />
   </form>
-  <!-- <select>
-    <option data-display="Select">Nothing</option>
-    <option value="1">Some option</option>
-    <option value="2">Another option</option>
-    <option value="3" disabled>A disabled option</option>
-    <option value="4">Potato</option>
-  </select> -->
+
   <ng-select
+    (change)="sendRegion($event)"
     class="custom"
-    [items]="cities"
+    [items]="regions"
     bindLabel="name"
     placeholder="Filter by Region"
     [(ngModel)]="selectedCity"
