--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
-<app-search></app-search>
-<app-cards-countries></app-cards-countries>
+<!-- <app-search></app-search>
+<app-cards-countries></app-cards-countries> -->
+<!-- <app-home></app-home> -->
+<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
