--- a/src/app/cards-countries/cards-countries.component.scss
+++ b/src/app/cards-countries/cards-countries.component.scss
@@ -1,16 +1,17 @@
 .card-group {
   margin: 40px auto;
-  width: 92%;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
   mat-card {
-    width: 20%;
+    width: 17%;
     height: 340px;
-    margin: 25px 18px;
+    margin: 2% 0.5%;
     border-radius: 8px;
     box-shadow: 0 0 3px hsl(0, 0%, 52%);
+    cursor: pointer;
     img {
       height: 60%;
     }
