--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,19 +10,26 @@ body {
   background-color: hsl(0, 0%, 98%);
   margin: 0;
   font-family: "Nunito Sans", sans-serif, Roboto, "Helvetica Neue";
-  .custom {
+  .ng-select.custom {
     width: 15%;
     height: 100%;
-  }
-  .ng-select-container {
-    font: {
-      family: "Nunito Sans", sans-serif;
-      weight: 600;
+    .ng-select-container {
+      @extend .ng-placeholder;
+      width: 100% !important;
+      height: 100% !important;
+      background-color: hsl(0, 0%, 100%) !important;
+      box-shadow: 0 0 2px hsl(0, 0%, 52%) !important;
+      .ng-value-container {
+        padding-left: 12%;
+      }
     }
-    color: hsl(200, 15%, 8%) !important;
-    width: 100% !important;
-    height: 100% !important;
-    background-color: hsl(0, 0%, 100%) !important;
-    box-shadow: 0 0 2px hsl(0, 0%, 52%) !important;
+    .ng-placeholder {
+      font: {
+        family: "Nunito Sans", sans-serif;
+        weight: 600;
+        size: 1.02rem;
+      }
+      color: hsl(200, 15%, 8%) !important;
+    }
   }
 }
