--- a/src/app/cards-countries/cards-countries.component.scss
+++ b/src/app/cards-countries/cards-countries.component.scss
@@ -5,17 +5,25 @@
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+
   mat-card {
     width: 17%;
     height: 340px;
     margin: 2% 0.5%;
     border-radius: 8px;
     box-shadow: 0 0 3px hsl(0, 0%, 52%);
+    &.modeDark {
+      background-color: hsl(209, 23%, 22%);
+      box-shadow: 0 0 3px hsl(209, 23%, 22%);
+    }
     cursor: pointer;
     img {
       height: 60%;
     }
     h3 {
+      &.modeDarkText {
+        color: hsl(0, 0%, 100%);
+      }
       font: {
         size: 1.1rem;
         family: "Nunito Sans", sans-serif;
@@ -25,6 +33,9 @@
     ul {
       padding: 0;
       margin: 0;
+      &.modeDarkText {
+        color: hsl(0, 0%, 100%);
+      }
       li {
         margin: 5px 0;
         list-style: none;
