--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -5,6 +5,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  .modeDark {
+    background-color: hsl(209, 23%, 22%);
+    box-shadow: 0 0 3px hsl(207, 26%, 17%);
+  }
   form {
     display: flex;
     align-items: center;
@@ -20,6 +25,12 @@
       width: 88%;
       border: none;
       color: hsl(200, 15%, 8%);
+
+      &.modeDarkText {
+        background-color: hsl(209, 23%, 22%);
+        color: hsl(0, 0%, 100%);
+      }
+
       font: {
         family: "Nunito Sans";
         size: 1rem;
@@ -28,7 +39,6 @@
       &:focus {
         border: none !important;
         outline: 0;
-        // background-color: red;
       }
     }
 
@@ -36,6 +46,125 @@
       padding-left: 20px;
       color: hsl(200, 15%, 8%);
       opacity: 0.5;
+      &.modeDarkText {
+        color: hsl(0, 0%, 100%);
+        opacity: 1;
+      }
     }
   }
+  .box {
+    width: 14%;
+    height: 100%;
+    margin-right: 1%;
+
+    .select-box {
+      display: flex;
+      flex-direction: column;
+      .options-container {
+        background-color: hsl(0, 0%, 100%);
+        color: hsl(200, 15%, 8%);
+        max-height: 0;
+        width: 100%;
+        opacity: 0;
+        transition: all 0.4s;
+        border-radius: 3px;
+        overflow: hidden;
+        z-index: 2;
+        order: 1;
+        margin-top: 8px;
+        font: {
+          size: 1rem;
+          family: "Nunito Sans", sans-serif;
+          weight: 600;
+        }
+        &.modeDark {
+          background-color: hsl(209, 23%, 22%);
+          color: hsl(0, 0%, 100%);
+        }
+      }
+      .selected-container {
+        // background-color: red;
+        display: flex;
+        align-items: center;
+        position: relative;
+        background-color: hsl(0, 0%, 100%);
+        box-shadow: 0 0 2px hsl(0, 0%, 52%);
+        cursor: pointer;
+        // height: 100%;
+        &.modeDark {
+          background-color: hsl(209, 23%, 22%);
+          box-shadow: 0 0 3px hsl(207, 26%, 17%);
+          color: hsl(0, 0%, 100%);
+        }
+        .selected {
+          top: 2px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          height: 33px;
+          box-shadow: none;
+          color: hsl(200, 15%, 8%);
+          order: 0;
+          font: {
+            size: 1rem;
+            family: "Nunito Sans", sans-serif;
+            weight: 600;
+          }
+          &.modeDark {
+            color: hsl(0, 0%, 100%);
+            box-shadow: none;
+          }
+        }
+      }
+
+      .options-container.active {
+        max-height: 100%;
+        opacity: 1;
+      }
+
+      .selected {
+        padding: 12px 24px;
+      }
+      .option {
+        display: block;
+        padding: 10px 24px;
+        cursor: pointer;
+        &:hover {
+          background-color: hsl(209, 23%, 22%);
+          color: hsl(0, 0%, 100%);
+        }
+        &.modeDark {
+          box-shadow: none;
+          &:hover {
+            background-color: #414b57;
+          }
+        }
+
+        label {
+          cursor: pointer;
+        }
+        .radio {
+          display: none;
+        }
+      }
+      .material-icons {
+        position: absolute;
+        right: 10px;
+        transition: 0.3s ease-in;
+        background-color: transparent;
+        color: hsl(200, 15%, 8%);
+        &.modeDark {
+          color: hsl(0, 0%, 100%);
+          box-shadow: none;
+        }
+      }
+      .options-container.active + .selected-container .material-icons {
+        transform: rotateX(180deg);
+      }
+    }
+  }
+}
+::-webkit-input-placeholder {
+  // color: hsl(200, 15%, 8%);
 }
