--- a/src/app/cards-countries/cards-countries.component.scss
+++ b/src/app/cards-countries/cards-countries.component.scss
@@ -1,20 +1,18 @@
+@use '../app.component.scss' as *;
 .card-group {
+  @extend %d-evenly-wrap-center;
   margin: 40px auto;
   width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
 
   mat-card {
     width: 17%;
     height: 340px;
     margin: 2% 0.5%;
     border-radius: 8px;
-    box-shadow: 0 0 3px hsl(0, 0%, 52%);
+    box-shadow: 0 0 3px $light-mode-input;
     &.modeDark {
-      background-color: hsl(209, 23%, 22%);
-      box-shadow: 0 0 3px hsl(209, 23%, 22%);
+      background-color: $dark-mode-elements;
+      box-shadow: 0 0 3px $dark-mode-elements;
     }
     cursor: pointer;
     img {
@@ -22,7 +20,7 @@
     }
     h3 {
       &.modeDarkText {
-        color: hsl(0, 0%, 100%);
+        color: $dark-mode-and-light-mode-elements;
       }
       font: {
         size: 1.1rem;
@@ -34,7 +32,7 @@
       padding: 0;
       margin: 0;
       &.modeDarkText {
-        color: hsl(0, 0%, 100%);
+        color: $dark-mode-and-light-mode-elements;
       }
       li {
         margin: 5px 0;
